--- a/manifest.yml
+++ b/manifest.yml
@@ -1,9 +1,10 @@
 applications:
 - name: hydra-user-service
-  memory: 700M
+  memory: 1G
   instances: 1
   random-route: false
-  buildpack: https://github.com/cloudfoundry/java-buildpack.git
   path: target/hydra-user-service-0.0.1-SNAPSHOT.jar
+  health-check-type: http
+  health-check-http-endpoint: /
   env:
     SPRING_PROFILES_ACTIVE: prod
